<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
    <TextView
    	android:layout_width="wrap_content"
    	android:id="@+id/TextView01"
    	android:text="@string/weight"
    	android:layout_height="wrap_content">
    </TextView>
    <EditText
    	android:text=""
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:id="@+id/EditText01">
    </EditText>
    <TextView
    	android:layout_width="wrap_content"
    	android:id="@+id/TextView02"
    	android:text="@string/height"
    	android:layout_height="wrap_content">
    </TextView>
    <EditText
    	android:text=""
    	android:layout_width="50dip"
    	android:layout_height="wrap_content"
    	android:id="@+id/editText1">
    </EditText>
    <TextView
    	android:layout_width="fill_parent"
    	android:id="@+id/textView1"
    	android:text="@string/age"
    	android:textColor="#0000FF"
    	android:background="#FFFF00"
    	android:layout_height="wrap_content">
    </TextView>
    <EditText
    	android:text=""
    	android:layout_height="wrap_content"
    	android:id="@+id/EditText02"
    	android:layout_width="160dip">
    </EditText>
    <Button
    	android:id="@+id/button1"
    	android:layout_width="85dip"
    	android:text="@string/calculate"
    	android:layout_height="wrap_content">
    </Button>
</LinearLayout>
