<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	<TextView  
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content" 
    	android:text="@string/number"
    />
	<EditText
		android:text=""
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:id="@+id/editText1">
	</EditText>
	<TextView
		android:text="@string/message"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">
	</TextView>
	<EditText
		android:id="@+id/editText2"
		android:text=""
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
	</EditText>
	<Button
		android:id="@+id/button1"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:text="@string/send">
	</Button>
</LinearLayout>
