<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
    <TextView
    	android:text="@string/worldTime"
    	android:id="@+id/textView1"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content">
    </TextView>
    <RadioButton
    	android:layout_below="@+id/textView1"
    	android:layout_height="wrap_content"
    	android:id="@+id/radioButton1"
    	android:text="@string/twelveHR"
    	android:layout_width="wrap_content"
    	android:layout_alignLeft="@+id/textView1">
    </RadioButton>
    <RadioButton
    	android:layout_below="@+id/radioButton1"
    	android:layout_height="wrap_content"
    	android:id="@+id/radioButton2"
    	android:text="@string/twentyFourHR"
    	android:layout_width="wrap_content"
    	android:layout_alignLeft="@+id/radioButton1">
    </RadioButton>
    <TextView
    	android:layout_below="@+id/radioButton2"
    	android:id="@+id/textView2"
    	android:layout_height="wrap_content"
    	android:text="@string/enterTime"
    	android:layout_width="fill_parent"
    	android:layout_alignLeft="@+id/radioButton2">
    </TextView>
    <EditText
    	android:text=""
    	android:layout_height="wrap_content"
    	android:layout_width="fill_parent"
    	android:id="@+id/editText1"
    	android:layout_below="@+id/textView2"
    	android:layout_alignLeft="@+id/textView2">
    </EditText>
    <LinearLayout
    	android:layout_below="@+id/editText1"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:id="@+id/linear1">
    	<Spinner
    		android:layout_height="wrap_content"
    		android:layout_below="@+id/editText1"
    		android:id="@+id/spinner2"
    		android:layout_alignLeft="@+id/editText1"
    		android:layout_width="fill_parent"
    		android:layout_weight="1"
    		android:prompt="@string/hello">
    	</Spinner>
    	<Spinner
    		android:layout_height="wrap_content"
    		android:id="@+id/spinner1"
    		android:layout_below="@+id/editText1"
    		android:layout_alignRight="@+id/editText1"
    		android:layout_width="fill_parent"
    		android:layout_weight="1">
    	</Spinner>
    </LinearLayout>
    <AnalogClock
    	android:layout_alignParentRight="true"
    	android:id="@+id/analogClock1"
    	android:layout_height="wrap_content"
    	android:layout_width="125dip">
    </AnalogClock>
	<LinearLayout
    	android:layout_below="@+id/linear1"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:id="@+id/linear2"
    	android:gravity="center_horizontal">
    	<Button
			android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/submit"
    		android:id="@+id/button1"
    		android:layout_below="@+id/linear1">
		</Button>
    </LinearLayout>
</RelativeLayout>
